tp-wik-dps-tp04/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 4
  strategy:
    rollingUpdate:
      maxUnavailable: 50
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: wik-dps-tp02
        image: registry.cluster.wik.cloud/public/echo
        ports:
        - containerPort: 8080
