tp-wik-dps-tp04/simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wik-dps-tp02
spec:
  containers:
  - name: wik-dps-tp02
    image: registry.cluster.wik.cloud/public/echo
    ports:
    - containerPort: 8080
